test/language/spec/stages/valid/cross_namespace_operation.topo
// Cross-namespace fn block: operation references function in sibling namespace

namespace app {

  public:
    void run();

    fn run {
      stage<1> helpers::setup();
      stage<2> helpers::teardown();
    }

  namespace helpers {
    protected:
      void setup();
      void teardown();
  }
}
