test/language/spec/stages/invalid/undeclared_operation.topo
// TEST: fn block references undeclared function
// EXPECT-ERROR: undeclared function

namespace app {
  public:
    void run();
    fn run {
      stage<1> ghost();
    }
}
